website/src/pages/Main/styles.css
#page-landing {
    width: 100vw;
    height: 100vh;
  
    display: flex;
    justify-content: center;
    align-items: center;
  
    color: var(--color-text-in-primary);
    background: var(--color-primary);
  }
  
  .logo-container img {
    height: 7rem;
  }
  
  .hero-image {
    width: 100%;
  }
  
  .logo-container {
    text-align: center;
    margin-bottom: 3.25rem;
  }
  
  .logo-container h2 {
    font-weight: 500;
    font-size: 2.75rem;
    line-height: 4.75rem;
    margin-top: 0.75rem;
  }
  
  .buttons-container {
    display: flex;
    justify-content: center;
    margin: 3.25rem 0;
  }
  
  .buttons-container a {
    width: 22.5rem;
    height: 10.4rem;
    border-radius: 0.75rem;
    font: 700 2rem Alegreya;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    color: var(--color-button-text);
    transition: background-color 0.25s;
  }
  
  .buttons-container a:first-child {
    margin-right: 1.6rem;
  }
  
  .buttons-container a img {
    width: 6.75rem;
  }
  
  .buttons-container a.learn {
    background: var(--color-primary-lighter);
  }
  .buttons-container a.teach {
    background: var(--color-secondary);
  }
  
  .buttons-container a.learn:hover {
    background: var(--color-primary-light);
  }
  .buttons-container a.teach:hover {
    background: var(--color-secondary-dark);
  }
  
  .buttons-container a img {
    margin: 0.5rem;
  }
  
  .total-connections {
    font-size: 1.75rem;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  .total-connections img{
    height: 20px;
    width: 20px;
    margin-left:0.5rem;
  }
  
  @media (min-width: 1100px) {
    #page-landing-content {
      max-width: 1100px;
      display: grid;
      grid-template-rows: 350px 1fr;
      grid-template-columns: 2fr 1fr fr;
      grid-template-areas:
        "logo hero hero"
        "buttons buttons total";
    }
    .logo-container {
      grid-area: logo;
      align-self: center;
      margin: 0;
    }
  
    .logo-container h2 {
      text-align: initial;
      font-size: 3rem;
    }
  
    .logo-container img {
      height: 100%;
    }
  
    .hero-image {
      grid-area: hero;
      justify-self: end;
    }
    .buttons-container {
      grid-area: buttons;
      justify-content: flex-start;
    }
  
    .buttons-container a {
      font-size: 2.4rem;
    }
  
    .total-connections {
      grid-area: total;
      justify-self: end;
    }
  
    .total-connections img {
      margin-left: 0.8rem;
    }
  }
  

